<resources>
    <string name="app_name">Workout</string>

    <string name="title_activity_choose_program">chooseProgram</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_nav">Nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Switch program</string>
    <string name="customization_reps">Reps</string>
    <string name="customization_sets">Sets</string>
    <string name="customization_name">Exercise name</string>
    <string name="menu_home">Training max</string>
    <string name="end_workout">Finish workout</string>
    <string name="menu_progress">Progress</string>
    <string name="menu_program">Program</string>
    <string name="menu_customization">Create program </string>
    <string name="max_change">Change</string>
    <string name="fragment_workout_button">Finish</string>
    <string name="fragment_progress_text">Change exercise</string>
    <string name="choose_name">Choose program name</string>
    <string name="choose_weeks">Choose amount of weeks</string>
    <string name="choose_days">Choose amount of days</string>
    <string name="home_second">Home Second</string>
    <string name="title_activity_create_program">CreateProgramActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="powerlifting">Powerlifting</string>
    <string name="powerbuilding">Powerbuilding</string>
    <string name="bodybuilding">Bodybuilding</string>
    <string name="type_select">Select type</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="exec_search">Search exercise</string>
    <string name="add_day">Day finished</string>
    <string name="delete_mode">Delete mode</string>
    <string name="customization_weight">Weight</string>
</resources>
