<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_program">
    <fragment
        android:id="@+id/nav_program"
        android:name="com.example.workout.ui.Program.ProgramFragment"
        android:label="@string/menu_program"
        tools:layout="@layout/fragment_workout" />
    <fragment
        android:id="@+id/nav_maxes"
        android:name="com.example.workout.ui.TrainingMax.MaxesFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_maxes">
    </fragment>
    <fragment
        android:id="@+id/nav_progress"
        android:name="com.example.workout.ui.Progress.ProgressFragment"
        android:label="@string/menu_progress"
        tools:layout="@layout/fragment_graph" />


</navigation>