<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/phase2_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/customization_name"
        android:inputType="text"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phase2_week_info" />

    <EditText
        android:id="@+id/phase2_sets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/customization_sets"
        android:inputType="numberDecimal"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/phase2_reps"
        app:layout_constraintTop_toBottomOf="@+id/phase2_day_info" />

    <EditText
        android:id="@+id/phase2_reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/customization_reps"
        android:inputType="numberDecimal"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/phase2_weight"
        app:layout_constraintTop_toBottomOf="@+id/phase2_day_info" />

    <EditText
        android:id="@+id/phase2_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/customization_weight"
        android:inputType="numberDecimal"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/isMaxCheck"
        app:layout_constraintTop_toBottomOf="@+id/phase2_day_info" />

    <ListView
        android:id="@+id/customization_exercises"
        android:layout_width="wrap_content"
        android:layout_height="403dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/add_day_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phase2_name" />

    <Button
        android:id="@+id/add_day_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add_day"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/phase2_week_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phase2_day_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/phase2_name"
        app:layout_constraintStart_toEndOf="@+id/phase2_week_info"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/add_exec_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/buttonshape"
        android:text="✔"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phase2_day_info" />

    <CheckBox
        android:id="@+id/isMaxCheck"
        android:layout_width="40dp"
        android:gravity="center"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toStartOf="@+id/add_exec_button"
        app:layout_constraintTop_toBottomOf="@+id/phase2_day_info" />

</androidx.constraintlayout.widget.ConstraintLayout>